--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:12:07 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:12:50 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -215,7 +215,7 @@ Not started</td>
       <td>Will Zalatoris -1
 Not started</td>
       <td class="greyout leftborder">Russell Henley +5
-+2 thru 7</td>
++2 thru 8</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -277,7 +277,7 @@ Not started</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Talor Gooch +2
-E thru 6</td>
+E thru 7</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -455,7 +455,7 @@ Not started</td>
       <td>Jon Rahm(W) +1
 -1 thru 2</td>
       <td class="greyout leftborder">Talor Gooch +2
-E thru 6</td>
+E thru 7</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -477,17 +477,17 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jack Fleck</td>
-      <td class="bigbold">-5</td>
+      <td class="bigbold">-4</td>
       <td>Hideki Matsuyama -3
 Not started</td>
       <td>Cameron Smith -2
 Not started</td>
       <td>Justin Thomas -1
 Not started</td>
-      <td>Tiger Woods +1
-Not started</td>
-      <td class="greyout leftborder">Rory McIlroy(W) +2
+      <td>Rory McIlroy(W) +2
 E thru 4</td>
+      <td class="greyout leftborder">Tiger Woods +2
++1 thru 1</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -572,22 +572,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">-2</td>
-      <td>Collin Morikawa -1
-Not started</td>
-      <td>Justin Thomas -1
-Not started</td>
-      <td>Will Zalatoris -1
-Not started</td>
-      <td>Tiger Woods(W) +1
-Not started</td>
-      <td class="greyout leftborder">Rory McIlroy +2
-E thru 4</td>
-      <td class="greyout">Viktor Hovland +3
--1 thru 11</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jabby</td>
       <td class="bigbold">-2</td>
       <td>Justin Thomas(W) -1
@@ -652,22 +636,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Don Shaw</td>
-      <td class="bigbold">-1</td>
-      <td>Cameron Smith -2
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Jon Rahm(W) +1
--1 thru 2</td>
-      <td>Tiger Woods +1
-Not started</td>
-      <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">-1</td>
       <td>Cameron Smith(W) -2
@@ -682,6 +650,22 @@ Not started</td>
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">-1</td>
+      <td>Collin Morikawa -1
+Not started</td>
+      <td>Justin Thomas -1
+Not started</td>
+      <td>Will Zalatoris -1
+Not started</td>
+      <td>Tiger Woods(W) +2
++1 thru 1</td>
+      <td class="greyout leftborder">Rory McIlroy +2
+E thru 4</td>
+      <td class="greyout">Viktor Hovland +3
+-1 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 1</td>
@@ -700,6 +684,22 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Don Shaw</td>
+      <td class="bigbold">0</td>
+      <td>Cameron Smith -2
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Jon Rahm(W) +1
+-1 thru 2</td>
+      <td>Tiger Woods +2
++1 thru 1</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">CRED</td>
       <td class="bigbold">1</td>
       <td>Scottie Scheffler -8
@@ -713,22 +713,6 @@ Not started</td>
       <td class="greyout leftborder">Brooks Koepka(W)
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">1</td>
-      <td>Collin Morikawa(W) -1
-Not started</td>
-      <td>Justin Thomas -1
-Not started</td>
-      <td>Tiger Woods +1
-Not started</td>
-      <td>Rory McIlroy +2
-E thru 4</td>
-      <td class="greyout leftborder">Viktor Hovland +3
--1 thru 11</td>
-      <td class="greyout">Gary Woodland
 Missed Cut</td>
     </tr>
     <tr>
@@ -809,6 +793,22 @@ Not started</td>
       <td class="greyout leftborder">Daniel Berger +5
 +3 thru 6</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">2</td>
+      <td>Collin Morikawa(W) -1
+Not started</td>
+      <td>Justin Thomas -1
+Not started</td>
+      <td>Rory McIlroy +2
+E thru 4</td>
+      <td>Tiger Woods +2
++1 thru 1</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+-1 thru 11</td>
+      <td class="greyout">Gary Woodland
 Missed Cut</td>
     </tr>
     <tr>
