--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:23:36 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:24:19 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -221,15 +221,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Wilson</td>
-      <td class="bigbold">-11</td>
+      <td class="bigbold">-10</td>
       <td>Scottie Scheffler(W) -8
 Not started</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Will Zalatoris -1
 Not started</td>
-      <td>Jon Rahm +1
--1 thru 3</td>
+      <td>Jon Rahm +2
+E thru 4</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -260,10 +260,10 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris -1
 Not started</td>
-      <td>Jon Rahm(W) +1
--1 thru 3</td>
-      <td class="greyout leftborder">Webb Simpson +1
+      <td>Webb Simpson +1
 E thru 1</td>
+      <td class="greyout leftborder">Jon Rahm(W) +2
+E thru 4</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -284,22 +284,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Roy Jeffrey B</td>
-      <td class="bigbold">-9</td>
-      <td>Scottie Scheffler(W) -8
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Patrick Cantlay +1
-E thru 1</td>
-      <td>Jon Rahm +1
--1 thru 3</td>
-      <td class="greyout leftborder">Rory McIlroy +2
-E thru 5</td>
-      <td class="greyout">Robert MacIntyre +3
-+1 thru 2</td>
-    </tr>
-    <tr>
       <td class="bigbold">The Resort</td>
       <td class="bigbold">-9</td>
       <td>Shane Lowry -3
@@ -310,8 +294,8 @@ Not started</td>
 Not started</td>
       <td>Corey Conners -1
 Not started</td>
-      <td class="greyout leftborder">Jon Rahm +1
--1 thru 3</td>
+      <td class="greyout leftborder">Jon Rahm +2
+E thru 4</td>
       <td class="greyout">Viktor Hovland +3
 -1 thru 12</td>
     </tr>
@@ -348,6 +332,22 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Roy Jeffrey B</td>
+      <td class="bigbold">-8</td>
+      <td>Scottie Scheffler(W) -8
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Patrick Cantlay +1
+E thru 1</td>
+      <td>Rory McIlroy +2
+E thru 5</td>
+      <td class="greyout leftborder">Jon Rahm +2
+E thru 4</td>
+      <td class="greyout">Robert MacIntyre +3
++1 thru 2</td>
+    </tr>
+    <tr>
       <td class="bigbold">Tom Davis</td>
       <td class="bigbold">-8</td>
       <td>Shane Lowry -3
@@ -361,22 +361,6 @@ Not started</td>
       <td class="greyout leftborder">Patrick Cantlay +1
 E thru 1</td>
       <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Lyle Rattray</td>
-      <td class="bigbold">-7</td>
-      <td>Scottie Scheffler -8
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Patrick Cantlay(W) +1
-E thru 1</td>
-      <td>Jon Rahm +1
--1 thru 3</td>
-      <td class="greyout leftborder">Viktor Hovland +3
--1 thru 12</td>
-      <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
     <tr>
@@ -444,19 +428,19 @@ E thru 5</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Ron Harrington</td>
-      <td class="bigbold">-5</td>
-      <td>Hideki Matsuyama -3
-Not started</td>
-      <td>Cameron Smith -2
+      <td class="bigbold">Lyle Rattray</td>
+      <td class="bigbold">-6</td>
+      <td>Scottie Scheffler -8
 Not started</td>
       <td>Corey Conners -1
 Not started</td>
-      <td>Jon Rahm(W) +1
--1 thru 3</td>
-      <td class="greyout leftborder">Talor Gooch +2
-E thru 7</td>
-      <td class="greyout">Brooks Koepka
+      <td>Patrick Cantlay(W) +1
+E thru 1</td>
+      <td>Jon Rahm +2
+E thru 4</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+-1 thru 12</td>
+      <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
     <tr>
@@ -472,6 +456,22 @@ Not started</td>
 E thru 1</td>
       <td class="greyout leftborder">Viktor Hovland +3
 -1 thru 12</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Ron Harrington</td>
+      <td class="bigbold">-4</td>
+      <td>Hideki Matsuyama -3
+Not started</td>
+      <td>Cameron Smith -2
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Jon Rahm(W) +2
+E thru 4</td>
+      <td class="greyout leftborder">Talor Gooch +2
+E thru 7</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -500,28 +500,12 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris -1
 Not started</td>
-      <td>Jon Rahm(W) +1
--1 thru 3</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
+      <td>Patrick Cantlay +1
 E thru 1</td>
+      <td class="greyout leftborder">Jon Rahm(W) +2
+E thru 4</td>
       <td class="greyout">Viktor Hovland +3
 -1 thru 12</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Santorini Sunrises</td>
-      <td class="bigbold">-3</td>
-      <td>Cameron Smith -2
-Not started</td>
-      <td>Corey Conners(W) -1
-Not started</td>
-      <td>Will Zalatoris -1
-Not started</td>
-      <td>Jon Rahm +1
--1 thru 3</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">New Lu</td>
@@ -540,51 +524,19 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Hosegood</td>
+      <td class="bigbold">Santorini Sunrises</td>
       <td class="bigbold">-2</td>
-      <td>Hideki Matsuyama -3
+      <td>Cameron Smith -2
 Not started</td>
-      <td>Collin Morikawa(W) -1
-Not started</td>
-      <td>Patrick Cantlay +1
-E thru 1</td>
-      <td>Jon Rahm +1
--1 thru 3</td>
-      <td class="greyout leftborder">Paul Casey
-Out With Injury</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">-2</td>
-      <td>Hideki Matsuyama -3
-Not started</td>
-      <td>Justin Thomas -1
-Not started</td>
-      <td>Jon Rahm(W) +1
--1 thru 3</td>
-      <td>Patrick Cantlay +1
-E thru 1</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jabby</td>
-      <td class="bigbold">-2</td>
-      <td>Justin Thomas(W) -1
-Not started</td>
-      <td>Corey Conners -1
+      <td>Corey Conners(W) -1
 Not started</td>
       <td>Will Zalatoris -1
 Not started</td>
-      <td>Jon Rahm +1
--1 thru 3</td>
-      <td class="greyout leftborder">Rory McIlroy +2
-E thru 5</td>
-      <td class="greyout">Brooks Koepka
+      <td>Jon Rahm +2
+E thru 4</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -604,22 +556,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Fred Jamieson</td>
-      <td class="bigbold">-2</td>
-      <td>Scottie Scheffler -8
-Not started</td>
-      <td>Jon Rahm(W) +1
--1 thru 3</td>
-      <td>Rory McIlroy +2
-E thru 5</td>
-      <td>Viktor Hovland +3
--1 thru 12</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Low Golf IQ</td>
       <td class="bigbold">-2</td>
       <td>Shane Lowry(W) -3
@@ -633,6 +569,38 @@ Not started</td>
       <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
       <td class="greyout">Brian Harman
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Hosegood</td>
+      <td class="bigbold">-1</td>
+      <td>Hideki Matsuyama -3
+Not started</td>
+      <td>Collin Morikawa(W) -1
+Not started</td>
+      <td>Patrick Cantlay +1
+E thru 1</td>
+      <td>Jon Rahm +2
+E thru 4</td>
+      <td class="greyout leftborder">Paul Casey
+Out With Injury</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Roy Jeffrey A</td>
+      <td class="bigbold">-1</td>
+      <td>Hideki Matsuyama -3
+Not started</td>
+      <td>Justin Thomas -1
+Not started</td>
+      <td>Patrick Cantlay +1
+E thru 1</td>
+      <td>Jon Rahm(W) +2
+E thru 4</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -668,34 +636,50 @@ E thru 5</td>
 -1 thru 12</td>
     </tr>
     <tr>
+      <td class="bigbold">Jabby</td>
+      <td class="bigbold">-1</td>
+      <td>Justin Thomas(W) -1
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Will Zalatoris -1
+Not started</td>
+      <td>Rory McIlroy +2
+E thru 5</td>
+      <td class="greyout leftborder">Jon Rahm +2
+E thru 4</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Fred Jamieson</td>
+      <td class="bigbold">-1</td>
+      <td>Scottie Scheffler -8
+Not started</td>
+      <td>Jon Rahm(W) +2
+E thru 4</td>
+      <td>Rory McIlroy +2
+E thru 5</td>
+      <td>Viktor Hovland +3
+-1 thru 12</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Walk 1</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">1</td>
       <td>Collin Morikawa -1
 Not started</td>
       <td>Will Zalatoris -1
 Not started</td>
       <td>Patrick Cantlay +1
 E thru 1</td>
-      <td>Jon Rahm +1
--1 thru 3</td>
+      <td>Jon Rahm +2
+E thru 4</td>
       <td class="greyout leftborder">Viktor Hovland(W) +3
 -1 thru 12</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Don Shaw</td>
-      <td class="bigbold">0</td>
-      <td>Cameron Smith -2
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Jon Rahm(W) +1
--1 thru 3</td>
-      <td>Tiger Woods +2
-+1 thru 1</td>
-      <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -711,6 +695,22 @@ E thru 1</td>
       <td>Adam Scott +8
 +4 thru 13</td>
       <td class="greyout leftborder">Brooks Koepka(W)
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Don Shaw</td>
+      <td class="bigbold">1</td>
+      <td>Cameron Smith -2
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Jon Rahm(W) +2
+E thru 4</td>
+      <td>Tiger Woods +2
++1 thru 1</td>
+      <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
@@ -732,70 +732,6 @@ E thru 5</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Brian McDonald</td>
-      <td class="bigbold">1</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Justin Thomas -1
-Not started</td>
-      <td>Jon Rahm(W) +1
--1 thru 3</td>
-      <td>Rory McIlroy +2
-E thru 5</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Lorette Hosegood</td>
-      <td class="bigbold">2</td>
-      <td>Dustin Johnson -2
-Not started</td>
-      <td>Patrick Cantlay +1
-E thru 1</td>
-      <td>Jon Rahm +1
--1 thru 3</td>
-      <td>Rory McIlroy(W) +2
-E thru 5</td>
-      <td class="greyout leftborder">Viktor Hovland +3
--1 thru 12</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">2</td>
-      <td>Justin Thomas(W) -1
-Not started</td>
-      <td>Will Zalatoris -1
-Not started</td>
-      <td>Jon Rahm +1
--1 thru 3</td>
-      <td>Viktor Hovland +3
--1 thru 12</td>
-      <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">2</td>
-      <td>Corey Conners(W) -1
-Not started</td>
-      <td>Collin Morikawa -1
-Not started</td>
-      <td>Jon Rahm +1
--1 thru 3</td>
-      <td>Robert MacIntyre +3
-+1 thru 2</td>
-      <td class="greyout leftborder">Daniel Berger +5
-+3 thru 7</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Downhill Down Wind</td>
       <td class="bigbold">2</td>
       <td>Collin Morikawa(W) -1
@@ -812,14 +748,78 @@ E thru 5</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Kash Ahmad</td>
+      <td class="bigbold">Brian McDonald</td>
       <td class="bigbold">2</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Justin Thomas -1
+Not started</td>
+      <td>Jon Rahm(W) +2
+E thru 4</td>
+      <td>Rory McIlroy +2
+E thru 5</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Lorette Hosegood</td>
+      <td class="bigbold">3</td>
+      <td>Dustin Johnson -2
+Not started</td>
+      <td>Patrick Cantlay +1
+E thru 1</td>
+      <td>Rory McIlroy(W) +2
+E thru 5</td>
+      <td>Jon Rahm +2
+E thru 4</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+-1 thru 12</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">3</td>
+      <td>Justin Thomas(W) -1
+Not started</td>
+      <td>Will Zalatoris -1
+Not started</td>
+      <td>Jon Rahm +2
+E thru 4</td>
+      <td>Viktor Hovland +3
+-1 thru 12</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">3</td>
+      <td>Corey Conners(W) -1
+Not started</td>
+      <td>Collin Morikawa -1
+Not started</td>
+      <td>Jon Rahm +2
+E thru 4</td>
+      <td>Robert MacIntyre +3
++1 thru 2</td>
+      <td class="greyout leftborder">Daniel Berger +5
++3 thru 7</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Kash Ahmad</td>
+      <td class="bigbold">3</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Will Zalatoris -1
 Not started</td>
-      <td>Jon Rahm(W) +1
--1 thru 3</td>
+      <td>Jon Rahm(W) +2
+E thru 4</td>
       <td>Viktor Hovland +3
 -1 thru 12</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -829,15 +829,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">4</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Patrick Cantlay(W) +1
 E thru 1</td>
-      <td>Jon Rahm +1
--1 thru 3</td>
       <td>Rory McIlroy +2
 E thru 5</td>
+      <td>Jon Rahm +2
+E thru 4</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -845,13 +845,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">5</td>
       <td>Justin Thomas(W) -1
 Not started</td>
       <td>Patrick Cantlay +1
 E thru 1</td>
-      <td>Jon Rahm +1
--1 thru 3</td>
+      <td>Jon Rahm +2
+E thru 4</td>
       <td>Viktor Hovland +3
 -1 thru 12</td>
       <td class="greyout leftborder">Daniel Berger +5
@@ -861,11 +861,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Glitter Girl</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">5</td>
       <td>Cameron Smith -2
 Not started</td>
-      <td>Jon Rahm(W) +1
--1 thru 3</td>
+      <td>Jon Rahm(W) +2
+E thru 4</td>
       <td>Rory McIlroy +2
 E thru 5</td>
       <td>Viktor Hovland +3
@@ -877,13 +877,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">5</td>
       <td>Collin Morikawa -1
 Not started</td>
-      <td>Jon Rahm(W) +1
--1 thru 3</td>
       <td>Patrick Cantlay +1
 E thru 1</td>
+      <td>Jon Rahm(W) +2
+E thru 4</td>
       <td>Tony Finau +3
 +1 thru 8</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -893,13 +893,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">6</td>
       <td>Dustin Johnson -2
 Not started</td>
       <td>Patrick Cantlay +1
 E thru 1</td>
-      <td>Jon Rahm +1
--1 thru 3</td>
+      <td>Jon Rahm +2
+E thru 4</td>
       <td>Viktor Hovland +3
 -1 thru 12</td>
       <td class="greyout leftborder">Jordan Spieth(W)
@@ -909,11 +909,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">7</td>
       <td>Collin Morikawa -1
 Not started</td>
-      <td>Jon Rahm +1
--1 thru 3</td>
+      <td>Jon Rahm +2
+E thru 4</td>
       <td>Viktor Hovland(W) +3
 -1 thru 12</td>
       <td>Patrick Reed +3
