--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:23:36 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:24:19 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -157,15 +157,15 @@ E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-13</td>
+      <td class="bigbold">-12</td>
       <td>Scottie Scheffler(W) -8
 Not started</td>
       <td>Shane Lowry -3
 Not started</td>
       <td>Will Zalatoris -1
 Not started</td>
-      <td>Jon Rahm +1
--1 thru 3</td>
+      <td>Jon Rahm +2
+E thru 4</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -196,10 +196,10 @@ Not started</td>
 Not started</td>
       <td>Corey Conners -1
 Not started</td>
-      <td>Jon Rahm +1
--1 thru 3</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
+      <td>Patrick Cantlay +1
 E thru 1</td>
+      <td class="greyout leftborder">Jon Rahm +2
+E thru 4</td>
       <td class="greyout">Tyrrell Hatton +4
 +2 thru 3</td>
     </tr>
@@ -284,22 +284,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">2</td>
-      <td>Corey Conners(W) -1
-Not started</td>
-      <td>Collin Morikawa -1
-Not started</td>
-      <td>Jon Rahm +1
--1 thru 3</td>
-      <td>Robert MacIntyre +3
-+1 thru 2</td>
-      <td class="greyout leftborder">Daniel Berger +5
-+3 thru 7</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jamie Watters</td>
       <td class="bigbold">3</td>
       <td>Dustin Johnson -2
@@ -316,14 +300,30 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">3</td>
+      <td>Corey Conners(W) -1
+Not started</td>
       <td>Collin Morikawa -1
 Not started</td>
-      <td>Jon Rahm(W) +1
--1 thru 3</td>
+      <td>Jon Rahm +2
+E thru 4</td>
+      <td>Robert MacIntyre +3
++1 thru 2</td>
+      <td class="greyout leftborder">Daniel Berger +5
++3 thru 7</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">5</td>
+      <td>Collin Morikawa -1
+Not started</td>
       <td>Patrick Cantlay +1
 E thru 1</td>
+      <td>Jon Rahm(W) +2
+E thru 4</td>
       <td>Tony Finau +3
 +1 thru 8</td>
       <td class="greyout leftborder">Jordan Spieth
@@ -333,13 +333,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">6</td>
       <td>Dustin Johnson -2
 Not started</td>
       <td>Patrick Cantlay +1
 E thru 1</td>
-      <td>Jon Rahm +1
--1 thru 3</td>
+      <td>Jon Rahm +2
+E thru 4</td>
       <td>Viktor Hovland +3
 -1 thru 12</td>
       <td class="greyout leftborder">Jordan Spieth(W)
@@ -349,11 +349,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">7</td>
       <td>Collin Morikawa -1
 Not started</td>
-      <td>Jon Rahm +1
--1 thru 3</td>
+      <td>Jon Rahm +2
+E thru 4</td>
       <td>Viktor Hovland(W) +3
 -1 thru 12</td>
       <td>Patrick Reed +3
