--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:27:11 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:27:54 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -214,8 +214,8 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris -1
 Not started</td>
-      <td class="greyout leftborder">Russell Henley +5
-+2 thru 8</td>
+      <td class="greyout leftborder">Russell Henley +4
++1 thru 9</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -460,6 +460,22 @@ E thru 1</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Jack Fleck</td>
+      <td class="bigbold">-5</td>
+      <td>Hideki Matsuyama -3
+Not started</td>
+      <td>Cameron Smith -2
+Not started</td>
+      <td>Justin Thomas -1
+Not started</td>
+      <td>Tiger Woods +1
+E thru 2</td>
+      <td class="greyout leftborder">Rory McIlroy(W) +2
+E thru 5</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Ron Harrington</td>
       <td class="bigbold">-4</td>
       <td>Hideki Matsuyama -3
@@ -473,22 +489,6 @@ E thru 4</td>
       <td class="greyout leftborder">Talor Gooch +2
 E thru 7</td>
       <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jack Fleck</td>
-      <td class="bigbold">-4</td>
-      <td>Hideki Matsuyama -3
-Not started</td>
-      <td>Cameron Smith -2
-Not started</td>
-      <td>Justin Thomas -1
-Not started</td>
-      <td>Rory McIlroy(W) +2
-E thru 5</td>
-      <td class="greyout leftborder">Tiger Woods +2
-+1 thru 1</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -538,6 +538,22 @@ E thru 4</td>
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">-2</td>
+      <td>Collin Morikawa -1
+Not started</td>
+      <td>Justin Thomas -1
+Not started</td>
+      <td>Will Zalatoris -1
+Not started</td>
+      <td>Tiger Woods(W) +1
+E thru 2</td>
+      <td class="greyout leftborder">Rory McIlroy +2
+E thru 5</td>
+      <td class="greyout">Viktor Hovland +3
+-1 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
@@ -620,22 +636,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">-1</td>
-      <td>Collin Morikawa -1
-Not started</td>
-      <td>Justin Thomas -1
-Not started</td>
-      <td>Will Zalatoris -1
-Not started</td>
-      <td>Tiger Woods(W) +2
-+1 thru 1</td>
-      <td class="greyout leftborder">Rory McIlroy +2
-E thru 5</td>
-      <td class="greyout">Viktor Hovland +3
--1 thru 12</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jabby</td>
       <td class="bigbold">-1</td>
       <td>Justin Thomas(W) -1
@@ -663,6 +663,22 @@ E thru 5</td>
       <td>Viktor Hovland +3
 -1 thru 12</td>
       <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Don Shaw</td>
+      <td class="bigbold">0</td>
+      <td>Cameron Smith -2
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Tiger Woods +1
+E thru 2</td>
+      <td>Jon Rahm(W) +2
+E thru 4</td>
+      <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
@@ -700,19 +716,19 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Don Shaw</td>
+      <td class="bigbold">Downhill Down Wind</td>
       <td class="bigbold">1</td>
-      <td>Cameron Smith -2
+      <td>Collin Morikawa(W) -1
 Not started</td>
-      <td>Corey Conners -1
+      <td>Justin Thomas -1
 Not started</td>
-      <td>Jon Rahm(W) +2
-E thru 4</td>
-      <td>Tiger Woods +2
-+1 thru 1</td>
-      <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
+      <td>Tiger Woods +1
+E thru 2</td>
+      <td>Rory McIlroy +2
+E thru 5</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+-1 thru 12</td>
+      <td class="greyout">Gary Woodland
 Missed Cut</td>
     </tr>
     <tr>
@@ -729,22 +745,6 @@ E thru 5</td>
       <td class="greyout leftborder">Viktor Hovland +3
 -1 thru 12</td>
       <td class="greyout">Xander Schauffele(W)
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">2</td>
-      <td>Collin Morikawa(W) -1
-Not started</td>
-      <td>Justin Thomas -1
-Not started</td>
-      <td>Rory McIlroy +2
-E thru 5</td>
-      <td>Tiger Woods +2
-+1 thru 1</td>
-      <td class="greyout leftborder">Viktor Hovland +3
--1 thru 12</td>
-      <td class="greyout">Gary Woodland
 Missed Cut</td>
     </tr>
     <tr>
