--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:29:20 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:30:03 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -349,15 +349,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">7</td>
+      <td class="bigbold">9</td>
       <td>Collin Morikawa -1
 Not started</td>
       <td>Jon Rahm +2
 E thru 4</td>
       <td>Viktor Hovland(W) +3
 -1 thru 12</td>
-      <td>Patrick Reed +3
-E thru 8</td>
+      <td>Patrick Reed +5
++2 thru 9</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Luke List
